RESOLVED FIXED305681
Final step in fixing crash in WebKit::WebPopupMenu::didChangeSelectedIndex.
https://bugs.webkit.org/show_bug.cgi?id=305681
Summary Final step in fixing crash in WebKit::WebPopupMenu::didChangeSelectedIndex.
Megan Gardner
Reported 2026-01-16 17:07:47 PST
Final step in fixing crash in WebKit::WebPopupMenu::didChangeSelectedIndex.
Attachments
Megan Gardner
Comment 1 2026-01-16 17:07:48 PST
Megan Gardner
Comment 2 2026-01-16 17:11:21 PST
EWS
Comment 3 2026-01-20 17:03:03 PST
Committed 305910@main (cf9cd69e0cb7): <https://commits.webkit.org/305910@main> Reviewed commits have been landed. Closing PR #56749 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.