Cherry-pick cf9cd69e0cb7. rdar://168580604

Final step in fixing crash in WebKit::WebPopupMenu::didChangeSelectedIndex.
    https://bugs.webkit.org/show_bug.cgi?id=305681
    rdar://162142276

    Reviewed by Wenson Hsieh.

    After the refactors in 305556@main and 305728@main
    we are now able to make PopupMenuClient a
    RefPtr instead of a CheckedPtr. This will allow
    us to check if a PopupMenuClient exists, and move
    on if it doesn't, instead of crashing.

    * Source/WebCore/html/HTMLSelectElement.h:
    * Source/WebCore/html/SearchInputType.h:
    * Source/WebCore/platform/PopupMenuClient.h:
    * Source/WebKit/WebProcess/WebCoreSupport/WebPopupMenu.cpp:
    (WebKit::WebPopupMenu::didChangeSelectedIndex):
    (WebKit::WebPopupMenu::setTextForIndex):
    (WebKit::WebPopupMenu::populateItems):
    (WebKit::WebPopupMenu::show):
    (WebKit::WebPopupMenu::hide):
    * Source/WebKit/WebProcess/WebCoreSupport/WebPopupMenu.h:
    * Source/WebKit/WebProcess/WebCoreSupport/mac/WebPopupMenuMac.mm:
    (WebKit::WebPopupMenu::setUpPlatformData):
    * Source/WebKitLegacy/mac/WebCoreSupport/PopupMenuMac.h:
    (PopupMenuMac::protectedClient const):
    (PopupMenuMac::checkedClient const): Deleted.
    * Source/WebKitLegacy/mac/WebCoreSupport/PopupMenuMac.mm:
    (PopupMenuMac::populate):
    (PopupMenuMac::show):
    (PopupMenuMac::hide):

    Canonical link: https://commits.webkit.org/305910@main

(cherry picked from commit 09f42d84786969711bed28afd4f4490add835be9)

Canonical link: https://commits.webkit.org/305413.195@safari-7624-branch